Fixes package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "phone-number-formatter",
+  "name": "phone-number-formats",
   "version": "1.1.0",
   "description": "Format phone numbers",
   "repository": "drewthoennes/phone-number-formatter",
