--- a/package.json
+++ b/package.json
@@ -7,8 +7,5 @@
     "name": "Drew Thoennes",
     "email": "dthoenne@purdue.edu"
   },
-  "license": "MIT",
-  "dependencies": {
-    "replace-at": "^1.0.0"
-  }
+  "license": "MIT"
 }
